tests/error/invalid_if.gw
// [contains] in if condition
if(NULL);
